# fast-track

./: .env  .gitignore  Cargo.toml  build.rs
app/: Cargo.toml  build.rs
app/src/: main.rs  routes.rs  state.rs
app/src/db/: mod.rs
app/src/entities/: issues.rs  mod.rs  prelude.rs  projects.rs  projects_to_users.rs  statuses.rs  users.rs
app/src/env/: load.rs  mod.rs
app/src/handlers/: index.rs  mod.rs  new_project.rs  project_board.rs  projects.rs  sidebar.rs  status_column.rs  welcome.rs
app/src/pages/: mod.rs  projects.rs
app/src/services/: mod.rs  projects.rs
app/src/templates/: mod.rs
app/src/views/: index.rs  mod.rs  new_project.rs  project_board.rs  projects.rs  sidebar.rs  welcome.rs
app/static/: custom.css  style.css
app/templates/: create_project_success.html  index.html  issue_card.html  issue_detail.html  new_project_form.html  new_project_modal.html  project_board.html  projects.html  sidebar.html  sidebar_base.html  status_column.html  welcome_board.html
migration_lib/: Cargo.toml
migration_lib/src/: lib.rs
migrations/: V1__initial_schema.sql  V2__seed_data.sql  V3__add_indexes_and_constraints.sql
src/: main.rs
src/db/: connection.rs  migrate.rs  mod.rs  projects.rs
src/entities/: issues.rs  mod.rs  prelude.rs  projects.rs  refinery_schema_history.rs  statuses.rs
src/pages/: index.rs  projects.rs
src/templates/: project.rs
static/: style.css
templates/: index.html
