[package]
name = "fast-track"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
askama = "0.14.0"
axum = { version = "0.8.6", features = ["ws", "macros"] }
axum-extra = { version = "0.12.1", features = ["form"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15.7"
futures = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
refinery = { version = "0.9.0", features = ["tokio-postgres"] }
refinery-core = "0.9.0"
refinery-macros = "0.9.0"
sea-orm = { version = "2.0.0-rc.18", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tokio-postgres = "0.7.15"
tower = "0.5.2"
tower-http = { version = "0.5.2", features = ["trace", "cors", "fs"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
migration_lib = { path = "../migration_lib" }

[build-dependencies]
migration_lib = { path = "../migration_lib" }
tokio = { version = "1.48.0", features = ["full"] }
dotenvy = "0.15.7"
refinery = { version = "0.9.0", features = ["tokio-postgres"] }
refinery-core = "0.9.0"
refinery-macros = "0.9.0"
