[package]
name = "migration_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dotenvy = "0.15.7"
refinery = { version = "0.9.0", features = ["tokio-postgres"] }
refinery-core = "0.9.0"
refinery-macros = "0.9.0"
sea-orm = { version = "2.0.0-rc.18", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tokio-postgres = "0.7.15"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
